# elf2var

./: .gitmodules  CMakeLists.txt  elf2var.c  elf2var.h
